# mpst_rust_github

./: .coveralls.yml  .gitignore  .gitlab-ci.yml  .temp_mail  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.tomler  LICENSE  README.md  artifact.md  cg_diff.sh  cg_diff.txt  codecov.yml  compile.sh  compile_time.txt  create_graph_bench.py  create_graph_compile.py  create_graph_compile_average.py  create_graph_compile_full.py  create_graph_expand_average.py  full.sh  full_compile.sh  main.rs  nohup.out  nohup.txt  notes.txt  response.md  result.rs  rustfmt.toml  rustfmt_2.toml
benches/: examples.rs  main.rs  (+23 more)
mpst-seq/: Cargo.toml  README.md
mpst-seq/mpst-seq-proc/: Cargo.toml  LICENSE.md  README.md
mpst-seq/mpst-seq-proc/src/: lib.rs
mpst-seq/mpst-seq-proc/src/basic/: basic.rs  mod.rs
mpst-seq/mpst-seq-proc/src/functionmpst/: mod.rs  recv.rs  recv_all_aux_simple.rs  recv_aux_simple.rs  send_aux_simple.rs
mpst-seq/mpst-seq-proc/src/macros/: baking.rs  baking_with_enum.rs  create_broadcast_role_short.rs  create_normal_role_short.rs  mod.rs
mpst-seq/src/: lib.rs
mpst-seq/tests/: 01-parse-header.rs  02-parse-body.rs  03-expand-four-errors.rs  04-paste-ident.rs  05-repeat-section.rs  06-make-work-in-function.rs  07-init-array.rs  08-inclusive-range.rs  09-ident-span.rs  09-ident-span.stderr  10-interaction-with-macrorules.rs  11-repeat-section-condition.rs  progress.rs
mpst_lints/mpst_lints/: Cargo.toml
mpst_lints/mpst_lints/src/: completeness.rs  lib.rs  test_lint.rs
mpst_lints/mpst_lints/tests/: test_lint.rs
mpst_seq/: CONTRIBUTING.md  Cargo.toml  README.md
mpst_seq/mpst-seq-proc/: Cargo.toml
mpst_seq/mpst-seq-proc/src/: lib.rs
mpst_seq/mpst_seq_proc/: Cargo.toml  LICENSE-MIT  LICENSE.md  README.md
mpst_seq/mpst_seq_proc/src/: choose_mpst_multi_to_all.rs  lib.rs
mpst_seq/mpst_seq_proc/src/baking/: baking_with_cancel.rs
mpst_seq/mpst_seq_proc/src/checking/: mod.rs
mpst_seq/mpst_seq_proc/src/functionmpst/: recv_all_aux_simple.rs  send_aux_simple.rs
mpst_seq/mpst_seq_proc/src/interleaved/: fork_mpst_multi_interleaved.rs  mod.rs
mpst_seq/mpst_seq_proc/src/macros/: baking.rs  baking_with_cancel.rs  baking_with_enum.rs  create_broadcast_role_short.rs
mpst_seq/src/: lib.rs
mpst_seq/tests/: 04-paste-ident.rs  05-repeat-section.rs  06-make-work-in-function.rs  07-init-array.rs  08-inclusive-range.rs  09-ident-span.rs  10-interaction-with-macrorules.rs  11-repeat-section-condition.rs  12-repeat-section-alternate.rs  progress.rs  session_mpst.rs
mpst_seq_baking/: Cargo.toml
mpst_seq_baking/mpst_seq_proc_baking/: Cargo.toml
mpst_seq_baking/mpst_seq_proc_baking/src/: lib.rs
mpst_seq_baking/mpst_seq_proc_baking/src/macros/: baking_with_enum_and_cancel.rs  create_normal_role_short.rs  mod.rs
mpst_seq_baking/src/: lib.rs
mpst_seq_checking/: Cargo.toml  README.md
mpst_seq_checking/mpst_seq_proc_checking/: Cargo.toml
mpst_seq_checking/mpst_seq_proc_checking/src/: lib.rs
mpst_seq_checking/src/: lib.rs
mpst_seq_http/: Cargo.toml
mpst_seq_http/mpst_seq_proc_http/: CODE_OF_CONDUCT.md  Cargo.toml
mpst_seq_http/mpst_seq_proc_http/src/: lib.rs
mpst_seq_http/mpst_seq_proc_http/src/macros/: mod.rs
mpst_seq_http/src/: lib.rs
mpst_seq_macros_multiple/: Cargo.toml
mpst_seq_macros_multiple/mpst_seq_proc_macros_multiple/: Cargo.toml
mpst_seq_macros_multiple/mpst_seq_proc_macros_multiple/src/: lib.rs
mpst_seq_macros_multiple/src/: lib.rs
mpst_seq_macros_simple/: Cargo.toml
mpst_seq_macros_simple/mpst_seq_proc_macros_simple/: Cargo.toml
mpst_seq_macros_simple/mpst_seq_proc_macros_simple/src/: lib.rs
mpst_seq_macros_simple/mpst_seq_proc_macros_simple/src/macros/: mod.rs
mpst_seq_macros_simple/src/: lib.rs
mpst_seq_proc/: CODE_OF_CONDUCT.md  Cargo.toml
mpst_seq_proc/src/: choose_atmp_mpst_multi_to_all.rs  choose_mpst_multi_to_all.rs  choose_timed_mpst_multi_to_all.rs  lib.rs
mpst_seq_proc/src/baking/: baking.rs  baking_basic.rs  baking_interleaved_with_enum_and_cancel.rs  baking_with_cancel.rs  baking_with_enum.rs  baking_with_enum_and_cancel.rs  mod.rs
mpst_seq_proc/src/baking_atmp/: baking_atmp_interleaved_with_enum_and_cancel.rs  baking_atmp_with_enum_and_cancel.rs  mod.rs
mpst_seq_proc/src/baking_timed/: baking_timed_interleaved_with_enum_and_cancel.rs  baking_timed_with_enum_and_cancel.rs  mod.rs
mpst_seq_proc/src/checking/: aux_checking.rs  aux_checking_impl.rs  branching.rs  mod.rs
mpst_seq_proc/src/common_functions/: maths.rs  mod.rs  parsing.rs
mpst_seq_proc/src/common_functions/expand/: aux_baking.rs  aux_fork.rs  cancel.rs  choose.rs  close.rs  close_atmp.rs  close_timed.rs  fork.rs  meshedchannels.rs  mod.rs  name.rs  offer.rs  parenthesised.rs  recv.rs  role.rs  role_atmp.rs  role_timed.rs  send.rs  session.rs  token_stream.rs
mpst_seq_proc/src/functionmpst/: mod.rs  recv_all_aux_simple.rs  recv_aux_simple.rs  send_aux_simple.rs
mpst_seq_proc/src/interleaved/: close_mpst_interleaved.rs  fork_mpst_multi_interleaved.rs  fork_mpst_multi_solo.rs  mod.rs
mpst_seq_proc/src/macros_http/: mod.rs
mpst_seq_proc/src/macros_http/choose/: choose_mpst_multi_http_to_all.rs  mod.rs
mpst_seq_proc/src/macros_http/recv/: create_recv_http_session.rs  mod.rs
mpst_seq_proc/src/macros_http/send/: create_send_http_session.rs  mod.rs
mpst_seq_proc/src/macros_multiple/: mod.rs
mpst_seq_proc/src/macros_multiple/multiple/: broadcast_cancel.rs  create_meshedchannels.rs  fork_mpst_multi.rs  mod.rs
mpst_seq_proc/src/macros_simple/: mod.rs
mpst_seq_proc/src/macros_simple/names/: create_normal_name_short.rs  mod.rs
mpst_seq_proc/src/macros_simple/offer/: create_offer_mpst_session_multi.rs  mod.rs
mpst_seq_proc/src/macros_simple/recv/: create_recv_mpst_session.rs  mod.rs
mpst_seq_proc/src/macros_simple/roles/: create_broadcast_role_short.rs  create_normal_role_short.rs  mod.rs
mpst_seq_proc/src/session_timed/: mod.rs  session.rs
mpst_seq_proc/tests/: 01-parse-enum.rs  02-not-enum.rs  02-not-enum.stderr  03-out-of-order.rs  04-variants-with-data.rs  05-variants-with-data.rs  progress.rs
(+4597 files in other folders)
