[package]
name = "mpstthree"
version = "0.1.17"
authors = ["NicolasLagaillardie <lagaillardie.nicolas@live.fr>"]
edition = "2018"
description = "A library implementing Multiparty Session Types for 2 or more participants"
readme = "README.md"
homepage = "https://github.com/NicolasLagaillardie/mpst_rust_github"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github"
license = "MIT OR Apache-2.0"
keywords = ["multiparty", "session", "affine", "multicrusty"]
documentation = "https://docs.rs/mpstthree"
categories = ["concurrency"]
# include = [
#     "/benches/**",
#     "/build.rs",
#     "/Cargo.toml",
#     "/LICENSE-APACHE",
#     "/LICENSE-MIT",
#     "/README.md",
#     "/src/**",
#     "/tests/**",
#     "/examples/**",
#     "main.rs",
# ]
exclude = [
    ".vscode/",
    ".travis.yml",
    "codecov.yml",
    ".gitignore",
    ".github/",
    ".cargo_vcs_info.json",
    "scripts/",
    "example/",
    "outputs/",
    "cfsm/",
    "compile_time/",
    "graphs_bench/",
    "rustfmt_2.toml",
    "notes.txt",
    "result.rs",
    "results/",
    "save/",
    "expand/",
    "target/",
]
autotests = false
autobenches = false

################################### Workspace

[workspace]
members = ["mpst_seq", "mpst_seq_proc"]

################################### Lib

[lib]
bench = false

################################### Bin

[[bin]]
name = "mpst"
path = "main.rs"
bench = false

################################### Tests

[[test]]
name = "checking"
path = "tests/checking.rs"
required-features = ["macros_multiple", "checking"]

[[test]]
name = "basics"
path = "tests/basics.rs"
required-features = ["checking"]

[[test]]
name = "binary"
path = "tests/binary.rs"
required-features = ["binary"]

[[test]]
name = "cancel"
path = "tests/cancel.rs"
required-features = ["baking"]

[[test]]
name = "macros_multiple"
path = "tests/macros_multiple.rs"
required-features = ["macros_multiple"]

[[test]]
name = "macros_simple"
path = "tests/macros_simple.rs"
required-features = ["macros_simple"]

[[test]]
name = "baking"
path = "tests/baking.rs"
required-features = ["baking", "checking"]

[[test]]
name = "extra"
path = "tests/extra.rs"
required-features = ["baking"]

[[test]]
name = "interleaved"
path = "tests/interleaved.rs"
required-features = ["baking_interleaved"]

[[test]]
name = "main"
path = "tests/main.rs"
required-features = []

[[test]]
name = "binary_timed"
path = "tests/binary_timed.rs"
required-features = ["binary_timed"]

[[test]]
name = "baking_timed"
path = "tests/baking_timed.rs"
required-features = ["baking_timed"]

[[test]]
name = "baking_message"
path = "tests/baking_message.rs"
required-features = ["baking", "message", "checking"]

################################### Benches

[[bench]]
name = "examples"
harness = false
path = "benches/examples.rs"
required-features = ["baking"]

[[bench]]
name = "main_timed"
harness = false
path = "benches/examples_timed.rs"
required-features = ["baking_timed"]

# [[bench]]
# name = "ping_pong"
# harness = false
# required-features = ["baking"]

# [[bench]]
# name = "mesh_affine"
# harness = false
# path = "benches/mesh_affine.rs"
# required-features = ["baking"]

# [[bench]]
# name = "ring_affine"
# harness = false
# path = "benches/ring_affine.rs"
# required-features = ["baking"]

# [[bench]]
# name = "mesh_timed"
# harness = false
# path = "benches/mesh_timed.rs"
# required-features = ["baking_timed"]

# [[bench]]
# name = "ring_timed"
# harness = false
# path = "benches/ring_timed.rs"
# required-features = ["baking_timed"]

################################### Basic examples

[[example]]
name = "circuit_breaker"
path = "examples/affine/circuit_breaker.rs"
required-features = ["macros_multiple"]

[[example]]
name = "logging"
path = "examples/affine/logging.rs"
required-features = ["macros_multiple"]

[[example]]
name = "circuit_breaker_baking"
path = "examples/affine/circuit_breaker_baking.rs"
required-features = ["baking"]

[[example]]
name = "logging_baking"
path = "examples/affine/logging_baking.rs"
required-features = ["baking"]

[[example]]
name = "distributed_calc"
path = "examples/affine/distributed_calc.rs"
required-features = ["macros_multiple"]

[[example]]
name = "dns_fowler"
path = "examples/affine/dns_fowler.rs"
required-features = ["baking"]

[[example]]
name = "dns_fowler_checking"
path = "examples/affine/dns_fowler_checking.rs"
required-features = ["baking_checking"]

[[example]]
name = "dns_imai"
path = "examples/affine/dns_imai.rs"
required-features = ["macros_multiple"]

[[example]]
name = "fib"
path = "examples/affine/fib.rs"
required-features = ["macros_multiple"]

[[example]]
name = "o_auth"
path = "examples/affine/o_auth.rs"
required-features = ["baking"]

[[example]]
name = "o_auth_checking"
path = "examples/affine/o_auth_checking.rs"
required-features = ["baking_checking"]

[[example]]
name = "o_auth_transport"
path = "examples/affine/o_auth_transport.rs"
required-features = ["transport_macros_multiple"]

[[example]]
name = "online_wallet"
path = "examples/affine/online_wallet.rs"
required-features = ["macros_multiple"]

[[example]]
name = "simple_voting"
path = "examples/affine/simple_voting.rs"
required-features = ["macros_multiple"]

[[example]]
name = "smtp"
path = "examples/affine/smtp.rs"
required-features = ["macros_multiple"]

[[example]]
name = "three_buyers"
path = "examples/affine/three_buyers.rs"
required-features = ["macros_multiple"]

[[example]]
name = "three_travel"
path = "examples/affine/three_travel.rs"
required-features = ["macros_multiple"]

[[example]]
name = "video_stream_basic"
path = "examples/affine/video_stream_basic.rs"
required-features = ["macros_simple"]

[[example]]
name = "video_stream"
path = "examples/affine/video_stream.rs"
required-features = ["baking_checking"]

[[example]]
name = "adder"
path = "examples/affine/adder.rs"
required-features = ["baking_checking"]

[[example]]
name = "basic"
path = "examples/affine/basic.rs"
required-features = ["baking_checking"]

[[example]]
name = "servo_8257_original"
path = "examples/affine/servo_8257_original.rs"
required-features = ["baking_checking"]

[[example]]
name = "servo_8257_fixed"
path = "examples/affine/servo_8257_fixed.rs"
required-features = ["baking_checking"]

[[example]]
name = "servo_8257_async_failing"
path = "examples/timed/servo_8257_async_failing.rs"
required-features = ["baking_timed"]

[[example]]
name = "servo_8257_async_working"
path = "examples/timed/servo_8257_async_working.rs"
required-features = ["baking_timed"]

[[example]]
name = "servo_8257_async_fixed"
path = "examples/timed/servo_8257_async_fixed.rs"
required-features = ["baking_timed"]

[[example]]
name = "simple_voting_timed"
path = "examples/timed/simple_voting.rs"
required-features = ["baking_timed"]

[[example]]
name = "distributed_calc_timed"
path = "examples/timed/distributed_calc.rs"
required-features = ["baking_timed"]

[[example]]
name = "fib_timed"
path = "examples/timed/fib.rs"
required-features = ["baking_timed"]

[[example]]
name = "o_auth_timed"
path = "examples/timed/o_auth.rs"
required-features = ["baking_timed"]

[[example]]
name = "online_wallet_timed"
path = "examples/timed/online_wallet.rs"
required-features = ["baking_timed"]

[[example]]
name = "smtp_timed"
path = "examples/timed/smtp.rs"
required-features = ["baking_timed"]

[[example]]
name = "three_buyers_timed"
path = "examples/timed/three_buyers.rs"
required-features = ["baking_timed"]

[[example]]
name = "three_travel_timed"
path = "examples/timed/three_travel.rs"
required-features = ["baking_timed"]

[[example]]
name = "remote_data"
path = "examples/timed/remote_data.rs"
required-features = ["baking_timed"]

# ################################### Affine Mesh examples

# [[example]]
# name = "mesh_two_baking"
# path = "examples/mesh/mesh_two_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_three_baking"
# path = "examples/mesh/mesh_three_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_four_baking"
# path = "examples/mesh/mesh_four_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_five_baking"
# path = "examples/mesh/mesh_five_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_six_baking"
# path = "examples/mesh/mesh_six_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_seven_baking"
# path = "examples/mesh/mesh_seven_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_eight_baking"
# path = "examples/mesh/mesh_eight_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_nine_baking"
# path = "examples/mesh/mesh_nine_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "mesh_ten_baking"
# path = "examples/mesh/mesh_ten_baking.rs"
# required-features = ["baking"]

# ################################### Timed Mesh examples

# [[example]]
# name = "mesh_two_baking_timed"
# path = "examples/mesh/mesh_two_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_three_baking_timed"
# path = "examples/mesh/mesh_three_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_four_baking_timed"
# path = "examples/mesh/mesh_four_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_five_baking_timed"
# path = "examples/mesh/mesh_five_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_six_baking_timed"
# path = "examples/mesh/mesh_six_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_seven_baking_timed"
# path = "examples/mesh/mesh_seven_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_eight_baking_timed"
# path = "examples/mesh/mesh_eight_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_nine_baking_timed"
# path = "examples/mesh/mesh_nine_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "mesh_ten_baking_timed"
# path = "examples/mesh/mesh_ten_baking_timed.rs"
# required-features = ["baking_timed"]

# ################################### Affine Ring examples

# [[example]]
# name = "ring_two_baking"
# path = "examples/ring/ring_two_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_three_baking"
# path = "examples/ring/ring_three_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_four_baking"
# path = "examples/ring/ring_four_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_five_baking"
# path = "examples/ring/ring_five_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_six_baking"
# path = "examples/ring/ring_six_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_seven_baking"
# path = "examples/ring/ring_seven_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_eight_baking"
# path = "examples/ring/ring_eight_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_nine_baking"
# path = "examples/ring/ring_nine_baking.rs"
# required-features = ["baking"]

# [[example]]
# name = "ring_ten_baking"
# path = "examples/ring/ring_ten_baking.rs"
# required-features = ["baking"]

# ################################### Timed Ring examples

# [[example]]
# name = "ring_two_baking_timed"
# path = "examples/ring/ring_two_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_three_baking_timed"
# path = "examples/ring/ring_three_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_four_baking_timed"
# path = "examples/ring/ring_four_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_five_baking_timed"
# path = "examples/ring/ring_five_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_six_baking_timed"
# path = "examples/ring/ring_six_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_seven_baking_timed"
# path = "examples/ring/ring_seven_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_eight_baking_timed"
# path = "examples/ring/ring_eight_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_nine_baking_timed"
# path = "examples/ring/ring_nine_baking_timed.rs"
# required-features = ["baking_timed"]

# [[example]]
# name = "ring_ten_baking_timed"
# path = "examples/ring/ring_ten_baking_timed.rs"
# required-features = ["baking_timed"]

################################### Profil

[profile.release]
debug = true

################################### Dependencies

[dependencies]
mpst-seq = { path = "mpst_seq" }
# mpst-seq = "0.1"
crossbeam-channel = "0.5"
either = "1.6"
# Extension libraries
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-tls = { version = "0.5", optional = true }
tokio = { version = "1.14", features = ["full"], optional = true }
# For kMC
regex = { version = "1.5", optional = true }
petgraph = { version = "0.6", optional = true }
# Protobuf libraries
protobuf = { version = "3.2", features = ["with-bytes"] }
protobuf-codegen = "3.2"
protoc-bin-vendored = "3.0"

################################### Dev-dependencies for tests/benches

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
trybuild = "1.0.63"
ntest = "0.8.1"
rand = "0.8.5"

################################### Features

[features]
default = ["binary", "role", "name", "meshedchannels", "functionmpst"]
binary = []
functionmpst = []
meshedchannels = []
role = []
name = []
message = []
binary_timed = []
macros_simple = ["default"]
macros_multiple = ["default", "macros_simple"]
interleaved = ["default"] # For interleaved sessions
checking = ["default", "regex", "petgraph"]
baking = ["default", "macros_multiple"]
baking_timed = ["binary_timed"]
baking_interleaved = ["baking", "interleaved"]
baking_checking = ["baking", "checking"]
transport_tcp = ["default"]
transport_udp = ["default"]
transport_http = ["default", "hyper", "hyper-tls", "tokio"]
transport = ["transport_tcp", "transport_udp", "transport_http"]
transport_macros_multiple = [
    "macros_multiple",
    "transport",
] # For test compile examples
protobuf = []
affine_timed = ["baking", "baking_timed"]
full_without_checking = ["baking", "transport"]
full = ["checking", "baking", "transport", "baking_timed"]

################################### Doc handling for all-features

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

################################### Rust playground features

[package.metadata.playground]
features = ["full", "interleaved"]
