[package]
name = "mpst-seq"
version = "0.0.1"
edition = "2018"
autotests = false

[dev-dependencies]
trybuild = "1.0.41"

[dependencies]
proc-macro-hack = "0.5.19"
# mpst-seq-proc = { git = "https://github.com/NicolasLagaillardie/mpst-seq-proc", branch = "main" }
# mpst-seq-proc = { path = "../mpst-seq-proc" }
mpst-seq-proc = { path = "mpst-seq-proc" }
