[package]
name = "mpst-seq"
version = "0.1.17"
authors = ["NicolasLagaillardie <nicolas.lagaillardie@tutanota.com>"]
description = "A library with macro for mpstthree"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq/"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq/"
license = "MIT OR Apache-2.0"
autotests = false
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/",
]

[dependencies]
proc-macro-hack = "0.5.19"
mpst-seq-proc = { path = "../mpst_seq_proc" }
# mpst-seq-proc = "0.1.14"
