[package]
name = "mpst-seq"
version = "0.1.18"
authors = ["NicolasLagaillardie <lagaillardie.nicolas@live.fr>"]
description = "DEPRECIATED: A library with macro for mpstthree"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq/"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq/"
license = "MIT OR Apache-2.0"
autotests = false
