[package]
name = "mpst-seq-baking"
version = "0.0.12"
authors = ["NicolasLagaillardie <lagaillardie.nicolas@live.fr>"]
description = "A library with macro for mpstthree"
edition = "2018"
readme = "README.md"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq_baking/"
license = "MIT OR Apache-2.0"
exclude = ["mpst_seq_proc_baking/"]
autotests = false

[workspace]
exclude = ["mpst_seq_proc_baking/"]

[dependencies]
proc-macro-hack = "0.5.19"
mpst-seq-proc-baking = { path = "mpst_seq_proc_baking", version = "0.0.12" }
# mpst-seq-proc-baking = "0.0.12"
