[package]
name = "mpst-seq-http"
version = "0.0.12"
authors = ["NicolasLagaillardie <lagaillardie.nicolas@live.fr>"]
description = "A library with macro for mpstthree"
edition = "2018"
readme = "README.md"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq_http/"
license = "MIT OR Apache-2.0"
exclude = ["mpst_seq_proc_http/"]
autotests = false

[workspace]
exclude = ["mpst_seq_proc_http/"]

[dependencies]
proc-macro-hack = "0.5.19"
mpst-seq-proc-http = { path = "mpst_seq_proc_http", version = "0.0.12" }
# mpst-seq-proc-http = "0.0.12"
