[package]
name = "mpst-seq-proc"
version = "0.1.14"
authors = ["NicolasLagaillardie <nicolas.lagaillardie@tutanota.com>"]
description = "A library with macro for mpstthree"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq_proc"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq_proc"
license = "MIT OR Apache-2.0"
autotests = false
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/",
]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.80"

[dependencies]
syn = { version = "2.0.18", features = ["extra-traits", "full", "parsing"] }
quote = "1.0.28"
proc-macro2 = "1.0.59"
itertools = "0.10.5"
