[package]
name = "mpst-seq-proc"
version = "0.1.14"
authors = ["NicolasLagaillardie <nicolas.lagaillardie@tutanota.com>"]
description = "A library with macro for mpstthree"
edition = "2021"
rust-version = "1.71.1"
readme = "README.md"
homepage = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq_proc"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github/tree/master/mpst_seq_proc"
license = "MIT OR Apache-2.0"
autotests = false
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/",
]

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "2.0.38", features = ["extra-traits", "full", "parsing"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"
itertools = "0.11.0"
