[package]
name = "mpst_lints"
version = "0.0.1"
authors = ["Nicolas Lagaillardie <lagaillardie.nicolas@live.fr>"]
edition = "2018"
description = "A bunch of helpful lints to avoid check protocols written with the Rust package MPSTThree"
readme = "README.md"
license = "MIT"
repository = "https://github.com/NicolasLagaillardie/mpst_rust_github"
keywords = ["mpstthree", "lint", "plugin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Will need to remove some of them
cargo_metadata = "0.9.1"
if_chain = "1.0.0"
itertools = "0.9"
lazy_static = "1.4.0"
pulldown-cmark = { version = "0.7", default-features = false }
quine-mc_cluskey = "0.2.4"
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1", features = ["union"] }
toml = "0.5.6"
unicode-normalization = "0.1"
semver = "0.9.0"
# NOTE: cargo requires serde feat in its url dep
# see <https://github.com/rust-lang/rust/pull/63587#issuecomment-522343864>
url = { version =  "2.1.0", features = ["serde"] }

[features]
deny-warnings = []