[package]
name = "mpst-seq-proc"
version = "0.0.1"
authors = ["NicolasLagaillardie <lagaillardie.nicolas@live.fr>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.41", features = ["extra-traits", "full"] }
quote = "1.0.7"
proc-macro2 = "1.0.21"
proc-macro-hack = "0.5.18"
